--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,5 +21,5 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-color: seagreen;
+  background-color: #83c7e8;
 }
