--- a/src/index.css
+++ b/src/index.css
@@ -83,3 +83,15 @@
   background-color: #83c7e8;
 } */
 
+.swiper-button-next,
+.swiper-button-prev {
+  color: white !important;
+}
+
+.swiper-pagination-bullet {
+  background: white !important;
+}
+
+.swiper-pagination-bullet-active {
+  background: white !important;
+}
